logger.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: istio-system
spec:
  selector:
    matchLabels:
      name: promtail
  template:
    metadata:
      labels:
        name: promtail
    spec:
      serviceAccountName: promtail
      containers:
      - name: promtail
        image: grafana/promtail:latest
        args:
        - -config.file=/etc/promtail/promtail.yaml
        volumeMounts:
        - name: logs
          mountPath: /var/log
        - name: config
          mountPath: /etc/promtail
      volumes:
      - name: logs
        hostPath:
          path: /var/log
      - name: config
        configMap:
          name: promtail-config
